Thu Apr 14 07:27:11 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeProjectCreator.pm:

          Changed the default back to using relative definitions.  You must
          now use -noreldefs if you do not want automatic relative
          definitions.

        * modules/ProjectCreator.pm:

          Support && and || within the 'optional' clause of a Define_Custom.

        * modules/Creator.pm:
        * modules/TemplateParser.pm:

          Support scoped variables which will allow users to modify project
          and template variables based on foreach values.  For example, if
          you wanted to set 'lit_libs' for only Debug builds with vc6 you
          could do this:

          project {
            specific(vc6) {
              Debug::lit_libs += foolib
            }
          }

        * templates/nmake.mpd:

          Use forward slashes in the DEPGEN setting to work with both Active
          State Perl and Cygwin Perl.

Wed Apr 13 07:18:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          Rewrote the tp_dirname() method to use the builtin rindex function
          instead of character iteration.

        * templates/nmake.mpd:

          Simplified this template to use dirname() instead of multiple
          contains().

Mon Apr 11 08:46:56 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmake.mpd:

          Corrected a bug dealing with source files containing ..\ where the
          explicit rules did not have the correct path.

Fri Apr  8 12:14:02 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WinProjectBase.pm:

          Since a directory with ..\ in it will cause the object files
          to be created outside of the intermediate directory,
          no Windows based project can have ..\ in the intermediate
          directory name.

        * templates/automake.mpd:
        * templates/automakedll.mpt:
